# Yew-Template

./: Cargo.toml
src/: app.rs  main.rs
src/components/: footer.rs  mod.rs  navbar.rs
src/routes/: about.rs  mod.rs
