[package]
name = "cosi_cosi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.56"
wasm-bindgen = "0.2.79"
wasm-logger = "0.2.0"
yew = "0.18.0"
yew-router = "0.15.0"
yew_styles = "0.11.0"
yew-interop = {version = "0.3", features = ["script"]}


[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Document",
    "HtmlElement",
    "MouseEvent",
    "DomRect",
]